--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,9 @@ contributor:
     deathdate: 1936
     gutenberg_agent_id: '34254'
     url: http://www.gutenberg.org/2009/agents/34254
+covers:
+- cover_type: archival
+  image_path: 74235-h/images/cover.jpg
 creator:
   authors:
   - agent_name: Hudson, W. H. (William Henry)
@@ -44,6 +47,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/42155
     wikipedia: https://en.wikipedia.org/wiki/Frank_Evers_Beddard
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74235#British-birds
 gutenberg_issued: '2024-08-12'
 gutenberg_type: Text
 identifiers:
